src/client/index.css
/* ... */
.liveinspect-keydata b.frac {
  font-weight: normal;
  font-size: 300%;
  font-family: arial narrow;
  position: relative;
  top: +8px;
}

.liveinspect-keydata .kds-pi {
  font-family: "Times New Roman", serif;
  font-size: 1.2em;
}

.liveinspect-keydata .newradical {
  border-collapse: collapse;
  display: inline-block;
  *display: inline;
  vertical-align: middle;
}

.liveinspect-keydata .newradical td {
  border: 0;
  padding: 0;
  vertical-align: top;
}

.liveinspect-keydata .newradical td.vinculum {
  border-top: 1px solid black;
  padding: 0;
  vertical-align: top;
}

.liveinspect-keydata .newradical div.exp {
  font-size: 0.7em;
  position: relative;
  left: 7px;
  bottom: 5px;
}

.liveinspect-keydata .kds-underline {
  text-decoration: underline;
}

.liveinspect-keydata .under {
  text-decoration: underline;
}

.liveinspect-keydata .kds-verdana2t {
  border: 1px solid white;
  text-align: left;
  text-decoration: none;
  vertical-align: top;
}

.liveinspect-keydata .Verdana2t {
  vertical-align: top;
  text-align: left;
  text-decoration: none;
  border: 1px solid white;
}

.liveinspect-keydata .kds-whole-number {
  display: inline-block;
  font-size: 120%;
  margin: 0 0 0 0.2em;
}

.liveinspect-keydata .whole {
  display: inline-block;
  *display: inline;
  margin: 0 0 0 0.2em;
  font-size: 120%;
}

.liveinspect-keydata table.KdsTable01 {
  border: 1px solid black;
  border-collapse: collapse;
  border-spacing: 0;
}

.liveinspect-keydata table.KdsTable01 > tbody > tr > th {
  background-color: #d3d3d3;
  border: 1px solid black;
  font-weight: normal;
  padding: 2px;
  text-align: center;
}

.liveinspect-keydata table.KdsTable01 > tbody > tr > th.bold {
  background-color: #d3d3d3;
  border: 1px solid black;
  font-weight: bold;
  padding: 2px;
  text-align: center;
}

.liveinspect-keydata table.KdsTable01 > tbody > tr > td {
  border: 1px solid black;
  padding: 2px;
  text-align: center;
}

.liveinspect-keydata table.KdsTable01 > tbody > tr > td.bold {
  border: 1px solid black;
  font-weight: bold;
  padding: 2px;
  text-align: center;
}

.liveinspect-keydata table.KdsTable02 {
  border: 1px solid black;
  border-collapse: collapse;
  border-spacing: 0;
}

.liveinspect-keydata table.KdsTable02 > tbody > tr > th {
  background-color: #d3d3d3;
  border: 1px solid black;
  font-weight: normal;
  padding: 2px;
}

.liveinspect-keydata table.KdsTable02 > tbody > tr > td {
  border: 1px solid black;
  padding: 2px;
}

/* Fluence Styles */

.liveinspect-keydata .book-title-k5 {
  text-decoration: underline;
}

.liveinspect-keydata .book-title {
  font-style: italic;
}

.liveinspect-keydata .block-quote {
  font-family: serif;
  margin: 5px 20%;
  width: 60%;
  border: 1px solid black;
  padding: 2px;
  display: block;
}

.liveinspect-keydata .text-block {
  font-family: serif;
  margin: 5px 20%;
  width: 60%;
  border: 1px solid black;
  padding: 2px;
  display: block;
}

.liveinspect-keydata .short-quote {
  font-weight: bold;
}

.liveinspect-keydata span.short-quote:before {
  content: open-quote;
}

.liveinspect-keydata span.short-quote:after {
  content: close-quote;
}

.liveinspect-keydata .word-callout {
  text-decoration: underline;
}

.liveinspect-keydata .relative-emphasis {
  text-transform: uppercase;
}

.liveinspect-keydata .content-emphasis {
  font-weight: bold;
  color: red;
}

.liveinspect-keydata span.passage-title:before {
  content: open-quote;
}

.liveinspect-keydata span.passage-title:after {
  content: close-quote;
}

.liveinspect-keydata .proper-name {
  font-style: italic;
}

.liveinspect-keydata .variable {
  font-style: italic;
}

.liveinspect-keydata .equation-block {
  text-align: center;
  margin: 5px 20%;
  width: 60%;
  padding: 2px;
  display: block;
}

.liveinspect-keydata .embedded-error {
  font-style: italic;
}

.liveinspect-keydata div.passage-subtitle,
.liveinspect-keydata div.passage-title {
  font-weight: bold;
  text-align: center;
}

.liveinspect-keydata div.passage-author {
  text-align: center;
}

.liveinspect-keydata .p-number {
  float: left;
  font-size: 0.85em;
}

.liveinspect-keydata .numbered-paragraph {
  margin-left: 36px;
}

.liveinspect-keydata .lrn_feature h3 {
  margin-top: 0 !important;
}

/* NOTE: Fix all inputs for Froala - show placeholder text */
.fr-box {
  width: 100%;
}

.jsx-parser table {
  margin: 8px 0;
}

.jsx-parser table td {
  border: 1px #ddd solid;
  padding: 4px 8px;
}

.jsx-parser .mq-math-mode {
  padding: 2px 4px;
  margin: 2px 4px;
  border: 1px solid #d9d9d9;
  border-radius: 4px;
  min-width: 60px;
}

.mq-editable-field.mq-focused,
.mq-math-mode .mq-editable-field.mq-focused {
  border-color: #00ad50;
  box-shadow: 0 0 1px 1px #5eb50066;
  border-radius: 4px !important;
}

.jsx-parser p {
  /* display: flex;
  flex-wrap: wrap;
  align-items: center; */
  margin-bottom: 8px;
  /* font-size: 16px; */
  font-weight: 400;
}

.katex .mfrac .frac-line {
  min-height: 1vh !important;
}
@media (max-width: 992px) {
  .jsx-parser p {
    font-size: 14px;
  }
}

.fr-view table {
  margin: 8px 0;
}

.fr-view table thead {
  font-weight: 700;
}

.fr-view table td,
.fr-view table th {
  padding: 8px;
}

.responses-boxes-btn {
  height: 27px !important;
  padding: 5px 8px !important;
  background: #cccccc;
  border: 1px solid black;
}

.ant-modal-wrap {
  z-index: 1003;
  overflow: hidden;
}

.ant-modal-mask {
  z-index: 1003;
}

/* Modified - Ant design default CSS */
/*Loader*/
.ant-spin {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
}

.ant-spin-dot .ant-spin-dot-item {
  background-color: #00ad50;
}

.fr-toolbar .fr-command.fr-btn[data-cmd="response"],
.fr-toolbar .fr-command.fr-btn[data-cmd="responseBoxes"],
.fr-toolbar .fr-command.fr-btn[data-cmd="textdropdown"],
.fr-toolbar .fr-command.fr-btn[data-cmd="textinput"] {
  border: 1px #000 dotted;
  height: 34px;
  padding: 0 4px;
  top: 4px;
}
/* ... */

